# DB-Project

./: README.md  pyproject.toml
Scripts/: Insert.sql  Queries.sql  Сreate.sql
src/: insert.py  statistic.py
src/db/: data_creation.py  models.py
