[tool.poetry]
name = "db-uni-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
faker = "^37.1.0"
sqlalchemy = "^2.0.40"
psycopg2 = "^2.9.10"
pandas = "^2.2.3"
plotly = "^6.0.1"
dash = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

